<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cup"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/relative_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/name_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="textCapWords" />

        <TextView
            style="@style/TextAppearance.AppCompat.Widget.Switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/name_view"
            android:layout_marginStart="150dp"
            android:layout_marginTop="10dp"
            android:text="@string/topping"
            android:textAllCaps="true"
            android:textColor="@android:color/black" />

        <CheckBox
            android:id="@+id/whipped_cream_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/name_view"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="110dp"
            android:layout_marginTop="120dp"
            android:paddingEnd="24dp"
            android:paddingStart="14dp"
            android:text="@string/whipped_cream"
            android:textSize="16sp" />

        <CheckBox

            android:id="@+id/chocolate_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="110dp"
            android:layout_marginTop="200dp"
            android:paddingEnd="24dp"
            android:paddingStart="14dp"
            android:text="@string/chocolate"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="155dp"
            android:layout_marginTop="440dp"
            android:text="@string/quantity"
            android:textAllCaps="true"
            android:textColor="@android:color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_marginStart="130dp"
                android:layout_marginTop="350dp"
                android:background="@color/plus_and_minus"
                android:onClick="decrement"
                android:text="@string/minus"
                android:textAllCaps="true"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="350dp"
                android:text="@string/number"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <Button
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="350dp"
                android:background="@color/plus_and_minus"
                android:onClick="increment"
                android:text="@string/plus"
                android:textAllCaps="true"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <Button
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_marginStart="145dp"
            android:layout_marginTop="485dp"
            android:background="@color/plus_and_minus"
            android:onClick="submitOrder"
            android:text="@string/order"
            android:textColor="@android:color/black" />

    </RelativeLayout>
</ScrollView>