<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.getyourcoffee.MainActivity">

    <android.support.v4.view.ViewPager
        android:id="@+id/slideViewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/dotsLayout"
        android:layout_alignParentStart="true">

    </android.support.v4.view.ViewPager>

    <LinearLayout
        android:id="@+id/dotsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:padding="15dp">
    </LinearLayout>

    <Button
        android:id="@+id/order_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_button"
        android:textColor="@color/button_text_color"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="492dp"
        android:visibility="invisible"
        android:textSize="14sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/prevBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/slideViewPager"
        android:background="@android:color/transparent"
        android:textColor="@android:color/darker_gray"
        android:text="@string/back_btn"
        android:visibility="invisible" />

    <Button
        android:id="@+id/nextBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/slideViewPager"
        android:textColor="@android:color/darker_gray"
        android:background="@android:color/transparent"
        android:text="@string/next_btn" />


</RelativeLayout>
